# katubi

./: .env.example  .gitattributes  Dockerfile  katubi-admin  pyproject.toml  tasks.py
.github/: dependabot.yml
.github/workflows/: build.yaml  ci.yaml
src/: manage.py  setup.cfg
src/katubi/: logging.py  lookup.py  settings.py  urls.py  wsgi.py
src/katubi/api/: urls.py
src/katubi/api/views/: __init__.py  _base.py  _reading_events.py
src/katubi/application/: handlers.py  message_bus.py  reading_events.py  types.py
src/katubi/application/commands/: __init__.py  _base.py  _reading_events.py
src/katubi/application/events/: __init__.py  _base.py
src/katubi/books/: admin.py  models.py  queries.py
src/katubi/books/migrations/: 0001_initial.py  0002_author_name_unique.py
src/katubi/domain/: messages.py
src/katubi/reading_events/: admin.py  models.py  operations.py
src/katubi/reading_events/migrations/: 0001_initial.py  0002_readingevent_user.py
src/katubi/volumes/: admin.py  models.py  operations.py
src/katubi/volumes/lookup/: __init__.py  _google_books.py  _isbn.py
src/katubi/volumes/migrations/: 0001_initial.py  0002_auto_20210729_2300.py
src/tests/: conftest.py  settings.py
src/tests/factories/: __init__.py  auth.py  books.py  lookup.py  reading_events.py  volumes.py
src/tests/fixtures/google_books_api/: isbn_valid.json  isbn_valid_missing_data.json
src/tests/functional/: conftest.py
src/tests/functional/api/: conftest.py  test_reading_events.py
src/tests/functional/application/commands/: test_commands.py
src/tests/integration/: test_.py
src/tests/integration/application/: test_reading_events.py
src/tests/integration/volumes/lookup/: test_isbn.py
src/tests/unit/: test_lookup.py
src/tests/unit/application/: test_message_bus.py
src/tests/unit/volumes/lookup/: test_google_books.py
