[tool.poetry]
name = "katubi"
version = "0"
description = ""
authors = ["Samuel Searles-Bryant <sam@samueljsb.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
djangorestframework = "^3.12.4"
envparse = "^0.2.0"
psycopg2 = "^2.9.1"
requests = "^2.25.1"
sentry-sdk = "^1.1.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^21.6b0"
django-stubs = "^1.7.0"
factory-boy = "^3.2.0"
flake8 = "^3.9.2"
invoke = "^1.5.0"
isort = "^5.9.1"
mypy = "^0.910"
pytest = "^6.2.4"
pytest-django = "^4.4.0"
responses = "^0.13.3"
types-requests = "^2.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
