[tool.poetry]
name = "katubi"
version = "0"
description = ""
authors = ["Samuel Searles-Bryant <sam@samueljsb.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
djangorestframework = "^3.12.4"
envparse = "^0.2.0"
psycopg2 = "^2.9.1"
requests = "^2.25.1"
sentry-sdk = "^1.3.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^21.6b0"
django-stubs = "^1.7.0"
factory-boy = "^3.2.0"
flake8 = "^3.9.2"
invoke = "^1.6.0"
isort = "^5.9.2"
mypy = "^0.910"
pytest = "^6.2.4"
pytest-django = "^4.4.0"
responses = "^0.13.3"
types-requests = "^2.25.0"
django-doctor = "^2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.djangodoctor]
disable = [
    # ForeignKey missing related_name - https://django.doctor/advice/C2005
    # We have not defined related names on the reading events models.
    "missing-related-name",
    # Model method order - https://django.doctor/advice/C3002
    # This is more picky than we need here.
    "model-method-order",
]
